projects/failsage/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: failsage
  labels:
    app.kubernetes.io/name: failsage
